--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,9 +1,6 @@
 <footer>
     <p class="footer">
-        Whoogle Search v{{ version_number }} ||
-        <a class="link" href="https://github.com/benbusby/whoogle-search">{{ translation['github-link'] }}</a>
-        {% if has_update %}
-             || <span class="update_available">Update Available 🟢</span>
-        {% endif %}
+        Findio, private search service by  
+        <a class="footer" target="_blank" href="https://amataagency.com/">Amata Agency.</a>
     </p>
 </footer>
