--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,4 +1,4 @@
-<form id="search-form" action="search" method="post">
+<form id="search-form" action="search" method="get">
     <input
             type="text"
             name="q"
